src/harness/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__exploring_step3_start_cat_foo.snap
---
source: src/harness/tui/src/chatwidget/tests.rs
expression: active_blob(&chat)
---
• Exploring
  └ List ls -la
    Read foo.txt
