src/harness/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__feedback_upload_consent_popup.snap
---
source: src/harness/tui/src/chatwidget/tests.rs
expression: popup
---
  Save logs locally?

  The following files will be saved under CODEY_HOME/feedback:
    • codex-logs.log

› 1. Yes  Save the current Codex session logs locally for troubleshooting.
  2. No   Save feedback only, without logs.

  Press enter to confirm or esc to go back
