src/harness/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__model_reasoning_selection_popup_extra_high_warning.snap
---
source: src/harness/tui/src/chatwidget/tests.rs
expression: popup
---
  Select Reasoning Level for gpt-5.1-codex-max

  1. Low                   Fast responses with lighter reasoning
  2. Medium (default)      Balances speed and reasoning depth for everyday
                           tasks
  3. High                  Greater reasoning depth for complex problems
› 4. Extra high (current)  Extra high reasoning depth for complex problems
                           ⚠ Extra high reasoning effort can quickly consume
                           Plus plan rate limits.

  Press enter to confirm or esc to go back
